--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -17,7 +17,7 @@
     "Survey": "Umfrage",
     "Surveys": "Umfragen",
     "Tracking": "Tracking",
-    "Course maintenance": "Course maintenance",
+    "Course maintenance": "Kurspflege",
     "Course setting": "Course setting",
     "Sign in": "Eintragen",
     "My courses": "Meine Kurse",
@@ -356,6 +356,8 @@
     "My Files": "My Files",
     "Published": "Ver\u00f6ffentlicht",
     "Draft": "Draft",
+    "Like": "Gef\u00e4llt mir",
+    "Dislike": "Gef\u00e4llt mir nicht",
     "My friends": "Meine Freunde",
     "View all friends": "Alle Freunde anzeigen",
     "Search user by geolocalization": "Search user by geolocalization",
@@ -400,21 +402,21 @@
     "Pick success color": "Pick success color",
     "Pick success color gradient": "Pick success color gradient",
     "Pick danger color": "Pick danger color",
-    "You can see examples of how chamilo will look here": "You can see examples of how chamilo will look here",
-    "Buttons": "Buttons",
+    "You can see examples of how chamilo will look here": "Sie k\u00f6nnen hier Beispiele daf\u00fcr sehen, wie Chamilo aussehen wird",
+    "Buttons": "Schaltfl\u00e4chen",
     "Button": "Button",
     "Disabled": "Deaktiviert",
     "Secondary": "Sekund\u00e4r",
-    "Tertiary": "Tertiary",
+    "Tertiary": "Terti\u00e4r",
     "Success": "Erfolg",
-    "Danger": "Danger",
+    "Danger": "Gefahr",
     "Menu on button pressed": "Menu on button pressed",
-    "Checkbox and radio buttons": "Checkbox and radio buttons",
+    "Checkbox and radio buttons": "Kontrollk\u00e4stchen und Optionsfelder",
     "Checkbox 1": "Checkbox 1",
     "Checkbox 2": "Checkbox 2",
     "This is a text example": "This is a text example",
     "Show dialog": "Show dialog",
-    "Dialog example": "Dialog example",
+    "Dialog example": "Beispiel f\u00fcr einen Dialog",
     "Item 1": "Item 1",
     "Item 2": "Item 2",
     "Item 3": "Item 3",
@@ -447,9 +449,9 @@
     "Are you sure you want to delete this event?": "Are you sure you want to delete this event?",
     "Edit introduction": "Edit introduction",
     "Show all": "Alles zeigen",
-    "Hide all": "Hide all",
-    "Sort": "Sort",
-    "Customize": "Customize",
+    "Hide all": "Alle ausblenden",
+    "Sort": "Sortieren",
+    "Customize": "Anpassen",
     "Updated": "Aktualisiert",
     "Create certificate": "Zertifikat erstellen",
     "New drawing": "New drawing",
