--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -35,16 +35,16 @@
     "Content is required": "Content is required",
     "Profile": "Perfil",
     "Inbox": "Buz\u00f3n d'entrada",
-    "Signed in as": "Signed in as",
+    "Signed in as": "Conectado como",
     "Settings": "Configuraci\u00f3n del cursu",
-    "Sign out": "Sign out",
+    "Sign out": "Cerrar sesi\u00f3n",
     "My progress": "Est\u00e1u",
     "Users": "Usuarios",
     "Courses": "Itinerarios formativos",
     "Sessions": "Sessions",
     "Administration": "Alministraci\u00f3n",
-    "Remember me": "Remember me",
-    "Register oneself": "Register oneself",
+    "Remember me": "Recordarme",
+    "Register oneself": "Crear una cuenta",
     "Share with User": "Share with User",
     "Course": "Cursu",
     "Session": "Sesi\u00f3n",
@@ -67,9 +67,9 @@
     "From:": "From:",
     "Until:": "Until:",
     "Go to session": "Go to session",
-    "See as student": "See as student",
+    "See as student": "Ver como estudiante",
     "Add a course introduction to display to your students": "Add a course introduction to display to your students",
-    "Course introduction": "Course introduction",
+    "Course introduction": "Introducci\u00f3n del curso",
     "Tools": "Ferramientes",
     "Course language": "Llingua del cursu:",
     "Department": "Departamentu",
@@ -101,13 +101,13 @@
     "User": "Usuariu",
     "Sent date": "Fecha d'unv\u00edu",
     "Attachments": "Recursos amestaos",
-    "You don't have any course content yet.": "You don't have any course content yet.",
-    "You don't have any course yet.": "You don't have any course yet.",
-    "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.": "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.",
-    "You don't have any session yet.": "You don't have any session yet.",
+    "You don't have any course content yet.": "No tiene ning\u00fan contenido de curso todav\u00eda.",
+    "You don't have any course yet.": "No tiene ning\u00fan curso todav\u00eda.",
+    "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.": "De clic en \"Explorar\" para encontrar un tema de inter\u00e9s, o espere a que alguien lo/la registre.",
+    "You don't have any session yet.": "No tiene ninguna sesi\u00f3n todav\u00eda.",
     "Password": "Se\u00f1a",
     "Update": "Actualizar",
-    "Add a course introduction to display to your students.": "Add a course introduction to show your students.",
+    "Add a course introduction to display to your students.": "Agregue una introducci\u00f3n al curso para mostrar a sus alumnos.",
     "Assessments": "Les mios notes",
     "Assignments": "Trabayos de los estudiantes",
     "Reporting": "Informes",
@@ -137,21 +137,21 @@
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
     "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
-    "Send diagnostic finalization message": "Send diagnostic finalization message",
-    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "Send diagnostic finalization message": "Enviar el mensaje de finalizaci\u00f3n del diagn\u00f3stico",
+    "DiagnosticfinalizationmessageTitle": "Finalizaci\u00f3n del diagn\u00f3stico",
     "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
     "Registration": "Rexistru",
-    "Current session tab": "Current",
-    "Upcoming session tab": "Upcoming",
-    "Past session tab": "Past",
-    "Sticky courses": "Special courses",
-    "This message was deleted when the user was removed from the platform on %s": "This message was deleted when the user was removed from the platform on {0}",
-    "My General Certificate": "My General Certificate",
+    "Current session tab": "Actual",
+    "Upcoming session tab": "Por venir",
+    "Past session tab": "Finalizadas",
+    "Sticky courses": "Cursos especiales",
+    "This message was deleted when the user was removed from the platform on %s": "Este mensaje fue eliminado cuando el usuario fue retirado de la plataforma el {0}",
+    "My General Certificate": "Mi Certificado General",
     "Social network": "Rede social",
-    "Sessions catalogue": "Sessions catalogue",
+    "Sessions catalogue": "Cat\u00e1logo de sesiones",
     "Create your certificate copy-pasting the following tags. They will be replaced in the document by their student-specific value:": "Criar certific\u00e1u con estes etiquetes",
-    "Your browser does not support Javascript": "Your browser does not support Javascript",
-    "Email reply header": "The {0}, {1} ({2}) wrote:",
+    "Your browser does not support Javascript": "Su navegador no soporta el JavaScript",
+    "Email reply header": "El {0}, {1} ({2}) escribi\u00f3:",
     "Read the installation guide": "Lleer la gu\u00eda d'instalaci\u00f3n",
     "Installation language": "Installation language",
     "Requirements": "Requer\u00edu",
@@ -280,7 +280,7 @@
     "Step 7 - Update process execution": "Step 7 - Update process execution",
     "Security advice": "Avisu de segurid\u00e1",
     "Menu": "Men\u00fa",
-    "Created with Chamilo copyright year": "Created with Chamilo \u00a9 {0}",
+    "Created with Chamilo copyright year": "Creado con Chamilo \u00a9 {0}",
     "FAQ": "FAQ",
     "Demo": "Demo",
     "Category name": "Nome de la categor\u00eda",
@@ -300,15 +300,15 @@
     "My Files": "My Files",
     "Draft": "Draft",
     "My friends": "Los mios amigos",
-    "View all friends": "View all friends",
+    "View all friends": "Todos mis amigos",
     "Search user by geolocalization": "Search user by geolocalization",
     "Skills Wheel": "Skills Wheel",
     "Your skill ranking": "Your skill ranking",
-    "My profile": "My profile",
+    "My profile": "Mi perfil",
     "Send message": "Unviar",
     "The comment is required": "The comment is required",
     "Comments": "Comentarios",
-    "Mark as promoted message": "Mark as promoted message",
+    "Mark as promoted message": "Marcar como mensaje importante",
     "File upload": "Unviar archivu",
     "Write something to {0}": "Write something to {0}",
     "Switch to student view": "Vista d'estudiante",
@@ -352,18 +352,18 @@
     "Value 1": "Value 1",
     "Value 2": "Value 2",
     "Value 3": "Value 3",
-    "Here you can manage registered users within your platform": "Here you can manage registered users within your platform",
-    "User management": "User management",
-    "Create and manage your courses in a simple way": "Create and manage your courses in a simple way",
-    "Course management": "Course management",
-    "Create course packages for a certain time with training sessions": "Create course packages for a certain time with training sessions",
-    "Sessions management": "Sessions management",
-    "Manage the skills of your users, through courses and badges": "Manage the skills of your users, through courses and badges",
-    "View the status of your server, perform performance tests": "View the status of your server, perform performance tests",
+    "Here you can manage registered users within your platform": "Aqu\u00ed puede gestionar a los usuarios registrados dentro de su plataforma",
+    "User management": "Gesti\u00f3n de usuarios",
+    "Create and manage your courses in a simple way": "Cree y gestione sus cursos de manera sencilla",
+    "Course management": "Gesti\u00f3n de cursos",
+    "Create course packages for a certain time with training sessions": "Cree paquetes de cursos para un tiempo determinado con sesiones de formaci\u00f3n",
+    "Sessions management": "Gesti\u00f3n de sesions",
+    "Manage the skills of your users, through courses and badges": "Gestione las habilidades de sus usuarios, a trav\u00e9s de cursos y distintivos",
+    "View the status of your server, perform performance tests": "Vea el estado de su servidor, realice pruebas de rendimiento",
     "Enable version check": "Habilitar la verificaci\u00f3n de versiones",
-    "Configure your platform, view reports, publish and send announcements globally": "Configure your platform, view reports, publish and send announcements globally",
-    "Platform management": "Platform management",
-    "Learn more about Chamilo and its use, official references links": "Learn more about Chamilo and its use, official references links",
+    "Configure your platform, view reports, publish and send announcements globally": "Configure su plataforma, visualice informes, publique y env\u00ede anuncios globalmente",
+    "Platform management": "Gesti\u00f3n de la plataforma",
+    "Learn more about Chamilo and its use, official references links": "Aprenda m\u00e1s sobre Chamilo y su uso, enlaces a referencias oficiales",
     "Version check enabled": "Comprobaci\u00f3n de la versi\u00f3n activa",
     "Version check": "Comprobar versi\u00f3n",
     "Assignment created": "Assignment created",
@@ -457,7 +457,7 @@
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
     "Search users for friends": "Search users for friends",
-    "Contact Us": "Contact Us",
+    "Contact Us": "Contactanos",
     "Teacher profile picture": "Teacher profile picture",
     "Picture": "Imaxe",
     "Sender profile picture": "Sender profile picture",
