--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -6,7 +6,7 @@
     "Attendances": "Assist\u00e8ncia",
     "Course description": "Detalls del curs",
     "Course progress": "Programaci\u00f3 did\u00e0ctica",
-    "Documents": "Documents",
+    "Documents": "Documentos",
     "Tests": "Exercicis",
     "Forum": "F\u00f2rums",
     "Glossary": "Glossari",
@@ -41,9 +41,9 @@
     "Content is required": "Content is required",
     "Profile": "Perfil",
     "Inbox": "Safata d'entrada",
-    "Signed in as": "Signed in as",
+    "Signed in as": "Conectado como",
     "Settings": "Modifica la informaci\u00f3 del curs",
-    "Sign out": "Sign out",
+    "Sign out": "Cerrar sesi\u00f3n",
     "My sessions": "Les meves sessions",
     "Events": "Esdeveniments",
     "My progress": "La meva situaci\u00f3",
@@ -51,8 +51,8 @@
     "Courses": "Itinerari formatiu",
     "Sessions": "Sessions",
     "Administration": "Administraci\u00f3",
-    "Remember me": "Remember me",
-    "Register oneself": "Register oneself",
+    "Remember me": "Recordarme",
+    "Register oneself": "Crear una cuenta",
     "Share with User": "Share with User",
     "Course": "Curs",
     "Session": "Sessi\u00f3",
@@ -76,9 +76,9 @@
     "From:": "From:",
     "Until:": "Until:",
     "Go to session": "Go to session",
-    "See as student": "See as student",
+    "See as student": "Ver como estudiante",
     "Add a course introduction to display to your students": "Add a course introduction to display to your students",
-    "Course introduction": "Course introduction",
+    "Course introduction": "Introducci\u00f3n del curso",
     "Tools": "Eines",
     "Loading": "Carregant",
     "Course language": "Idioma del curs",
@@ -115,14 +115,14 @@
     "Sent date": "Data d'enviament",
     "Sent": "Enviat",
     "Attachments": "Annexes",
-    "You don't have any course content yet.": "You don't have any course content yet.",
-    "You don't have any course yet.": "You don't have any course yet.",
-    "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.": "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.",
-    "You don't have any session yet.": "You don't have any session yet.",
+    "You don't have any course content yet.": "No tiene ning\u00fan contenido de curso todav\u00eda.",
+    "You don't have any course yet.": "No tiene ning\u00fan curso todav\u00eda.",
+    "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.": "De clic en \"Explorar\" para encontrar un tema de inter\u00e9s, o espere a que alguien lo/la registre.",
+    "You don't have any session yet.": "No tiene ninguna sesi\u00f3n todav\u00eda.",
     "Username": "Usuari",
     "Password": "Contrasenya",
     "Update": "Actualitzar",
-    "Add a course introduction to display to your students.": "Add a course introduction to show your students.",
+    "Add a course introduction to display to your students.": "Agregue una introducci\u00f3n al curso para mostrar a sus alumnos.",
     "Assessments": "Les meues qualificacions",
     "Assignments": "Publicacions d'estudiants",
     "Videoconference": "Videoconfer\u00e8ncia",
@@ -141,7 +141,7 @@
     "Coach": "Tutor",
     "Ranking": "Nivell",
     "Teachers": "Docents del curs",
-    "Categories": "Categories",
+    "Categories": "Categor\u00edas",
     "Category": "Categoria",
     "Language": "Idioma",
     "Go to the course": "V\u00e9s al curs",
@@ -156,23 +156,23 @@
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
     "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
-    "Send diagnostic finalization message": "Send diagnostic finalization message",
-    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
+    "Send diagnostic finalization message": "Enviar el mensaje de finalizaci\u00f3n del diagn\u00f3stico",
+    "DiagnosticfinalizationmessageTitle": "Finalizaci\u00f3n del diagn\u00f3stico",
     "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
     "Contact": "Contacte",
     "Registration": "Inscripci\u00f3",
-    "Current session tab": "Current",
-    "Upcoming session tab": "Upcoming",
-    "Past session tab": "Past",
-    "Sticky courses": "Special courses",
-    "This message was deleted when the user was removed from the platform on %s": "This message was deleted when the user was removed from the platform on {0}",
-    "My General Certificate": "My General Certificate",
+    "Current session tab": "Actual",
+    "Upcoming session tab": "Por venir",
+    "Past session tab": "Finalizadas",
+    "Sticky courses": "Cursos especiales",
+    "This message was deleted when the user was removed from the platform on %s": "Este mensaje fue eliminado cuando el usuario fue retirado de la plataforma el {0}",
+    "My General Certificate": "Mi Certificado General",
     "My skills": "Les meves compet\u00e8ncies",
     "Social network": "Xarxa social",
-    "Sessions catalogue": "Sessions catalogue",
+    "Sessions catalogue": "Cat\u00e1logo de sesiones",
     "Create your certificate copy-pasting the following tags. They will be replaced in the document by their student-specific value:": "Crear certificat amb aquestes etiquetes",
-    "Your browser does not support Javascript": "Your browser does not support Javascript",
-    "Email reply header": "The {0}, {1} ({2}) wrote:",
+    "Your browser does not support Javascript": "Su navegador no soporta el JavaScript",
+    "Email reply header": "El {0}, {1} ({2}) escribi\u00f3:",
     "My files": "Els meus arxius",
     "Read the installation guide": "Llegeix la guia d'instal\u00b7laci\u00f3",
     "Installation language": "Installation language",
@@ -282,7 +282,7 @@
     "Check database connection": "Comproveu la connexi\u00f3 amb la base de dades",
     "Step 4 - Database settings": "Step 4 - Database settings",
     "Database host": "Database host",
-    "Port": "Port",
+    "Port": "Puerto",
     "Database login": "Database login",
     "Database password": "Database password",
     "Database name": "Database name",
@@ -326,13 +326,13 @@
     "Step 7 - Update process execution": "Step 7 - Update process execution",
     "Security advice": "Av\u00eds de seguretat",
     "Menu": "Men\u00fa",
-    "Created with Chamilo copyright year": "Created with Chamilo \u00a9 {0}",
+    "Created with Chamilo copyright year": "Creado con Chamilo \u00a9 {0}",
     "FAQ": "FAQ",
     "Demo": "Demo",
     "Category name": "Nom de categoria",
     "Save category": "Save category",
     "Category saved": "Categoria desada",
-    "URL": "URL",
+    "URL": "Url",
     "Link name": "Nom de l'enlla\u00e7",
     "Show link on course homepage": "Mostrar l'enlla\u00e7 a la p\u00e0gina principal",
     "Select a category": "Seleccioneu una categoria",
@@ -351,19 +351,19 @@
     "My Files": "My Files",
     "Draft": "Draft",
     "My friends": "Els meus amics",
-    "View all friends": "View all friends",
+    "View all friends": "Todos mis amigos",
     "Search user by geolocalization": "Search user by geolocalization",
     "Skills": "Compet\u00e8ncies",
     "Skills Wheel": "Skills Wheel",
     "Your skill ranking": "Your skill ranking",
     "Without achieved skills": "Sense compet\u00e8ncies assolides",
-    "My profile": "My profile",
+    "My profile": "Mi perfil",
     "Social groups": "Grups",
     "Send message": "Enviar",
     "Write new comment": "Redactar nou comentari",
     "The comment is required": "The comment is required",
     "Comments": "Comentaris",
-    "Mark as promoted message": "Mark as promoted message",
+    "Mark as promoted message": "Marcar como mensaje importante",
     "File upload": "Enviar arxiu",
     "What are you thinking about?": "En qu\u00e8 est\u00e0 pensant en aquest moment?",
     "Write something to {0}": "Write something to {0}",
@@ -409,19 +409,19 @@
     "Value 1": "Value 1",
     "Value 2": "Value 2",
     "Value 3": "Value 3",
-    "Here you can manage registered users within your platform": "Here you can manage registered users within your platform",
-    "User management": "User management",
-    "Create and manage your courses in a simple way": "Create and manage your courses in a simple way",
-    "Course management": "Course management",
-    "Create course packages for a certain time with training sessions": "Create course packages for a certain time with training sessions",
-    "Sessions management": "Sessions management",
-    "Manage the skills of your users, through courses and badges": "Manage the skills of your users, through courses and badges",
-    "View the status of your server, perform performance tests": "View the status of your server, perform performance tests",
+    "Here you can manage registered users within your platform": "Aqu\u00ed puede gestionar a los usuarios registrados dentro de su plataforma",
+    "User management": "Gesti\u00f3n de usuarios",
+    "Create and manage your courses in a simple way": "Cree y gestione sus cursos de manera sencilla",
+    "Course management": "Gesti\u00f3n de cursos",
+    "Create course packages for a certain time with training sessions": "Cree paquetes de cursos para un tiempo determinado con sesiones de formaci\u00f3n",
+    "Sessions management": "Gesti\u00f3n de sesions",
+    "Manage the skills of your users, through courses and badges": "Gestione las habilidades de sus usuarios, a trav\u00e9s de cursos y distintivos",
+    "View the status of your server, perform performance tests": "Vea el estado de su servidor, realice pruebas de rendimiento",
     "Enable version check": "Activar la verificaci\u00f3 de versiones",
-    "Configure your platform, view reports, publish and send announcements globally": "Configure your platform, view reports, publish and send announcements globally",
-    "Platform management": "Platform management",
-    "Colors": "Colors",
-    "Learn more about Chamilo and its use, official references links": "Learn more about Chamilo and its use, official references links",
+    "Configure your platform, view reports, publish and send announcements globally": "Configure su plataforma, visualice informes, publique y env\u00ede anuncios globalmente",
+    "Platform management": "Gesti\u00f3n de la plataforma",
+    "Colors": "Colores",
+    "Learn more about Chamilo and its use, official references links": "Aprenda m\u00e1s sobre Chamilo y su uso, enlaces a referencias oficiales",
     "Version check enabled": "Comprovaci\u00f3 de la versi\u00f3 activada",
     "Version check": "Verificaci\u00f3 de la versi\u00f3",
     "Hide campus from public platforms list": "Amaga el campus de llista p\u00fablica de plataformes",
@@ -525,12 +525,13 @@
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
     "Search users for friends": "Search users for friends",
-    "Contact Us": "Contact Us",
+    "Contact Us": "Contactanos",
     "Business card": "Targeta personal",
     "Teacher profile picture": "Teacher profile picture",
     "Picture": "Imatge",
     "Sender profile picture": "Sender profile picture",
     "Receiver profile picture": "Receiver profile picture",
     "Carbon copy receiver profile picture": "Carbon copy receiver profile picture",
-    "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:": "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:"
+    "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:": "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:",
+    "A database with the same name <b>already exists</b>.": "Una base de dades amb el mateix nom <b>ja existeix</b>. El contingut de la base de dades es perdr\u00e0."
 }
