Language: Update language terms

--- a/assets/locales/eo.json
+++ b/assets/locales/eo.json
@@ -29,16 +29,16 @@
     "Content is required": "Content is required",
     "Profile": "Profilo",
     "Inbox": "Leterkesto",
-    "Signed in as": "Conectado como",
+    "Signed in as": "Signed in as",
     "Settings": "Kursaj ecoj",
-    "Sign out": "Cerrar sesi\u00f3n",
+    "Sign out": "Sign out",
     "My progress": "Mia statuso",
     "Users": "Uzuloj",
     "Courses": "Lernopadoj",
     "Sessions": "Sessions",
     "Administration": "Mastrumado",
-    "Remember me": "Recordarme",
-    "Register oneself": "Crear una cuenta",
+    "Remember me": "Remember me",
+    "Register oneself": "Register oneself",
     "Share with User": "Share with User",
     "Group": "Grupo",
     "Status": "Statuso",
@@ -56,9 +56,9 @@
     "From:": "From:",
     "Until:": "Until:",
     "Go to session": "Go to session",
-    "See as student": "Ver como estudiante",
+    "See as student": "See as student",
     "Add a course introduction to display to your students": "Add a course introduction to display to your students",
-    "Course introduction": "Introducci\u00f3n del curso",
+    "Course introduction": "Course introduction",
     "Tools": "Iloj",
     "Department": "Fakultato/faka grupo",
     "Department URL": "URL de via fakultato a\u016d fakgrupo",
@@ -82,12 +82,12 @@
     "Cc": "Cc",
     "User": "Uzulo",
     "Attachments": "Aldonita\u0135oj",
-    "You don't have any course content yet.": "No tiene ning\u00fan contenido de curso todav\u00eda.",
-    "You don't have any course yet.": "No tiene ning\u00fan curso todav\u00eda.",
-    "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.": "De clic en \"Explorar\" para encontrar un tema de inter\u00e9s, o espere a que alguien lo/la registre.",
-    "You don't have any session yet.": "No tiene ninguna sesi\u00f3n todav\u00eda.",
+    "You don't have any course content yet.": "You don't have any course content yet.",
+    "You don't have any course yet.": "You don't have any course yet.",
+    "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.": "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.",
+    "You don't have any session yet.": "You don't have any session yet.",
     "Password": "Pasvorto",
-    "Add a course introduction to display to your students.": "Agregue una introducci\u00f3n al curso para mostrar a sus alumnos.",
+    "Add a course introduction to display to your students.": "Add a course introduction to show your students.",
     "Assignments": "Studentaj publika\u0135oj",
     "Learning paths": "Lernopado",
     "Diagnostic Form": "Diagnostic Form",
@@ -109,19 +109,19 @@
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
     "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
-    "Send diagnostic finalization message": "Enviar el mensaje de finalizaci\u00f3n del diagn\u00f3stico",
-    "DiagnosticfinalizationmessageTitle": "Finalizaci\u00f3n del diagn\u00f3stico",
+    "Send diagnostic finalization message": "Send diagnostic finalization message",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
     "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
     "Registration": "Registrado",
-    "Current session tab": "Actual",
-    "Upcoming session tab": "Por venir",
-    "Past session tab": "Finalizadas",
-    "Sticky courses": "Cursos especiales",
-    "This message was deleted when the user was removed from the platform on %s": "Este mensaje fue eliminado cuando el usuario fue retirado de la plataforma el {0}",
-    "My General Certificate": "Mi Certificado General",
-    "Sessions catalogue": "Cat\u00e1logo de sesiones",
-    "Your browser does not support Javascript": "Su navegador no soporta el JavaScript",
-    "Email reply header": "El {0}, {1} ({2}) escribi\u00f3:",
+    "Current session tab": "Current",
+    "Upcoming session tab": "Upcoming",
+    "Past session tab": "Past",
+    "Sticky courses": "Special courses",
+    "This message was deleted when the user was removed from the platform on %s": "This message was deleted when the user was removed from the platform on {0}",
+    "My General Certificate": "My General Certificate",
+    "Sessions catalogue": "Sessions catalogue",
+    "Your browser does not support Javascript": "Your browser does not support Javascript",
+    "Email reply header": "The {0}, {1} ({2}) wrote:",
     "Installation language": "Installation language",
     "Licence": "Licenco",
     "Database settings": "Database settings",
@@ -222,7 +222,7 @@
     "Database Password": "Pasvorta datumbazo",
     "Step 7 - Installation process execution": "Step 7 - Installation process execution",
     "Step 7 - Update process execution": "Step 7 - Update process execution",
-    "Created with Chamilo copyright year": "Creado con Chamilo \u00a9 {0}",
+    "Created with Chamilo copyright year": "Created with Chamilo \u00a9 {0}",
     "FAQ": "FAQ",
     "Demo": "Demo",
     "Category name": "Kategoria nomo",
@@ -237,13 +237,13 @@
     "Locale": "Locale",
     "My Files": "My Files",
     "Draft": "Draft",
-    "View all friends": "Todos mis amigos",
+    "View all friends": "View all friends",
     "Search user by geolocalization": "Search user by geolocalization",
     "Skills Wheel": "Skills Wheel",
     "Your skill ranking": "Your skill ranking",
-    "My profile": "Mi perfil",
+    "My profile": "My profile",
     "The comment is required": "The comment is required",
-    "Mark as promoted message": "Marcar como mensaje importante",
+    "Mark as promoted message": "Mark as promoted message",
     "Write something to {0}": "Write something to {0}",
     "Switch to student view": "Studenta vido",
     "Switch to teacher view": "Kursmastrumanta vido",
@@ -280,17 +280,17 @@
     "Value 1": "Value 1",
     "Value 2": "Value 2",
     "Value 3": "Value 3",
-    "Here you can manage registered users within your platform": "Aqu\u00ed puede gestionar a los usuarios registrados dentro de su plataforma",
-    "User management": "Gesti\u00f3n de usuarios",
-    "Create and manage your courses in a simple way": "Cree y gestione sus cursos de manera sencilla",
-    "Course management": "Gesti\u00f3n de cursos",
-    "Create course packages for a certain time with training sessions": "Cree paquetes de cursos para un tiempo determinado con sesiones de formaci\u00f3n",
-    "Sessions management": "Gesti\u00f3n de sesions",
-    "Manage the skills of your users, through courses and badges": "Gestione las habilidades de sus usuarios, a trav\u00e9s de cursos y distintivos",
-    "View the status of your server, perform performance tests": "Vea el estado de su servidor, realice pruebas de rendimiento",
-    "Configure your platform, view reports, publish and send announcements globally": "Configure su plataforma, visualice informes, publique y env\u00ede anuncios globalmente",
-    "Platform management": "Gesti\u00f3n de la plataforma",
-    "Learn more about Chamilo and its use, official references links": "Aprenda m\u00e1s sobre Chamilo y su uso, enlaces a referencias oficiales",
+    "Here you can manage registered users within your platform": "Here you can manage registered users within your platform",
+    "User management": "User management",
+    "Create and manage your courses in a simple way": "Create and manage your courses in a simple way",
+    "Course management": "Course management",
+    "Create course packages for a certain time with training sessions": "Create course packages for a certain time with training sessions",
+    "Sessions management": "Sessions management",
+    "Manage the skills of your users, through courses and badges": "Manage the skills of your users, through courses and badges",
+    "View the status of your server, perform performance tests": "View the status of your server, perform performance tests",
+    "Configure your platform, view reports, publish and send announcements globally": "Configure your platform, view reports, publish and send announcements globally",
+    "Platform management": "Platform management",
+    "Learn more about Chamilo and its use, official references links": "Learn more about Chamilo and its use, official references links",
     "Version check enabled": "Versikontrolo en\u015daltitas",
     "Version check": "Versia kontrolo",
     "Assignment created": "Assignment created",
@@ -375,7 +375,7 @@
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
     "Search users for friends": "Search users for friends",
-    "Contact Us": "Contactanos",
+    "Contact Us": "Contact Us",
     "Teacher profile picture": "Teacher profile picture",
     "Picture": "Bildo",
     "Sender profile picture": "Sender profile picture",
