--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -34,16 +34,16 @@
     "Content is required": "Content is required",
     "Profile": "Runamanta",
     "Inbox": "Willana ch'askiq",
-    "Signed in as": "Conectado como",
+    "Signed in as": "Signed in as",
     "Settings": "Yachachinaq kamachiynin",
-    "Sign out": "Cerrar sesi\u00f3n",
+    "Sign out": "Sign out",
     "My progress": "Imayna kay",
     "Users": "Haykuqmasikuna",
     "Courses": "Itinerarios formativos",
     "Sessions": "Sessions",
     "Administration": "Kamachina",
-    "Remember me": "Recordarme",
-    "Register oneself": "Crear una cuenta",
+    "Remember me": "Remember me",
+    "Register oneself": "Register oneself",
     "Share with User": "Share with User",
     "Course": "Yachachina",
     "Session": "Sesi\u00f3n nisqa",
@@ -66,9 +66,9 @@
     "From:": "From:",
     "Until:": "Until:",
     "Go to session": "Go to session",
-    "See as student": "Ver como estudiante",
+    "See as student": "See as student",
     "Add a course introduction to display to your students": "Add a course introduction to display to your students",
-    "Course introduction": "Introducci\u00f3n del curso",
+    "Course introduction": "Course introduction",
     "Tools": "Llank'ana",
     "Course language": "Yachachinaq simin:",
     "Department": "Departamento",
@@ -100,13 +100,13 @@
     "User": "Haykuqmasikuna",
     "Sent date": "Pacha apachinapaq",
     "Attachments": "Yanapaysikuna yapasqa",
-    "You don't have any course content yet.": "No tiene ning\u00fan contenido de curso todav\u00eda.",
-    "You don't have any course yet.": "No tiene ning\u00fan curso todav\u00eda.",
-    "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.": "De clic en \"Explorar\" para encontrar un tema de inter\u00e9s, o espere a que alguien lo/la registre.",
-    "You don't have any session yet.": "No tiene ninguna sesi\u00f3n todav\u00eda.",
+    "You don't have any course content yet.": "You don't have any course content yet.",
+    "You don't have any course yet.": "You don't have any course yet.",
+    "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.": "Go to \"Explore\" to find a topic of interest, or wait for someone to subscribe you.",
+    "You don't have any session yet.": "You don't have any session yet.",
     "Password": "Qelqa paka",
     "Update": "Kunanyachiy",
-    "Add a course introduction to display to your students.": "Agregue una introducci\u00f3n al curso para mostrar a sus alumnos.",
+    "Add a course introduction to display to your students.": "Add a course introduction to show your students.",
     "Assessments": "Mis calificaciones",
     "Assignments": "Llank'aynakuna",
     "Reporting": "Willaykuna",
@@ -133,20 +133,20 @@
     "Loading courses. Please wait.": "Loading courses. Please wait.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
     "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
-    "Send diagnostic finalization message": "Enviar el mensaje de finalizaci\u00f3n del diagn\u00f3stico",
-    "DiagnosticfinalizationmessageTitle": "Finalizaci\u00f3n del diagn\u00f3stico",
+    "Send diagnostic finalization message": "Send diagnostic finalization message",
+    "DiagnosticfinalizationmessageTitle": "Diagnostic finalization",
     "DiagnosticfinalizationmessageContent": "Hi {0}, I'm {1} and I'm reviewing your diagnostic to define the course you will be following.",
     "Registration": "Registro",
-    "Current session tab": "Actual",
-    "Upcoming session tab": "Por venir",
-    "Past session tab": "Finalizadas",
-    "Sticky courses": "Cursos especiales",
-    "This message was deleted when the user was removed from the platform on %s": "Este mensaje fue eliminado cuando el usuario fue retirado de la plataforma el {0}",
-    "My General Certificate": "Mi Certificado General",
+    "Current session tab": "Current",
+    "Upcoming session tab": "Upcoming",
+    "Past session tab": "Past",
+    "Sticky courses": "Special courses",
+    "This message was deleted when the user was removed from the platform on %s": "This message was deleted when the user was removed from the platform on {0}",
+    "My General Certificate": "My General Certificate",
     "Social network": "Muyu reqsisqa",
-    "Sessions catalogue": "Cat\u00e1logo de sesiones",
-    "Your browser does not support Javascript": "Su navegador no soporta el JavaScript",
-    "Email reply header": "El {0}, {1} ({2}) escribi\u00f3:",
+    "Sessions catalogue": "Sessions catalogue",
+    "Your browser does not support Javascript": "Your browser does not support Javascript",
+    "Email reply header": "The {0}, {1} ({2}) wrote:",
     "Installation language": "Installation language",
     "Licence": "Licencia",
     "Database settings": "Database settings",
@@ -272,7 +272,7 @@
     "Step 7 - Update process execution": "Step 7 - Update process execution",
     "Security advice": "Aviso de seguridad",
     "Menu": "Men\u00fa",
-    "Created with Chamilo copyright year": "Creado con Chamilo \u00a9 {0}",
+    "Created with Chamilo copyright year": "Created with Chamilo \u00a9 {0}",
     "FAQ": "FAQ",
     "Demo": "Demo",
     "Category name": "Mitaq sutin",
@@ -291,15 +291,15 @@
     "My Files": "My Files",
     "Draft": "Draft",
     "My friends": "Kunpaykuna",
-    "View all friends": "Todos mis amigos",
+    "View all friends": "View all friends",
     "Search user by geolocalization": "Search user by geolocalization",
     "Skills Wheel": "Skills Wheel",
     "Your skill ranking": "Your skill ranking",
-    "My profile": "Mi perfil",
+    "My profile": "My profile",
     "Send message": "Apachiy",
     "The comment is required": "The comment is required",
     "Comments": "Rimayrikuna",
-    "Mark as promoted message": "Marcar como mensaje importante",
+    "Mark as promoted message": "Mark as promoted message",
     "File upload": "Apachiy khiputa",
     "Write something to {0}": "Write something to {0}",
     "Switch to student view": "Yachaqe qhawariynin",
@@ -343,18 +343,18 @@
     "Value 1": "Value 1",
     "Value 2": "Value 2",
     "Value 3": "Value 3",
-    "Here you can manage registered users within your platform": "Aqu\u00ed puede gestionar a los usuarios registrados dentro de su plataforma",
-    "User management": "Gesti\u00f3n de usuarios",
-    "Create and manage your courses in a simple way": "Cree y gestione sus cursos de manera sencilla",
-    "Course management": "Gesti\u00f3n de cursos",
-    "Create course packages for a certain time with training sessions": "Cree paquetes de cursos para un tiempo determinado con sesiones de formaci\u00f3n",
-    "Sessions management": "Gesti\u00f3n de sesions",
-    "Manage the skills of your users, through courses and badges": "Gestione las habilidades de sus usuarios, a trav\u00e9s de cursos y distintivos",
-    "View the status of your server, perform performance tests": "Vea el estado de su servidor, realice pruebas de rendimiento",
+    "Here you can manage registered users within your platform": "Here you can manage registered users within your platform",
+    "User management": "User management",
+    "Create and manage your courses in a simple way": "Create and manage your courses in a simple way",
+    "Course management": "Course management",
+    "Create course packages for a certain time with training sessions": "Create course packages for a certain time with training sessions",
+    "Sessions management": "Sessions management",
+    "Manage the skills of your users, through courses and badges": "Manage the skills of your users, through courses and badges",
+    "View the status of your server, perform performance tests": "View the status of your server, perform performance tests",
     "Enable version check": "Activar la verificaci\u00f3n de versiones",
-    "Configure your platform, view reports, publish and send announcements globally": "Configure su plataforma, visualice informes, publique y env\u00ede anuncios globalmente",
-    "Platform management": "Gesti\u00f3n de la plataforma",
-    "Learn more about Chamilo and its use, official references links": "Aprenda m\u00e1s sobre Chamilo y su uso, enlaces a referencias oficiales",
+    "Configure your platform, view reports, publish and send announcements globally": "Configure your platform, view reports, publish and send announcements globally",
+    "Platform management": "Platform management",
+    "Learn more about Chamilo and its use, official references links": "Learn more about Chamilo and its use, official references links",
     "Version check enabled": "Comprobaci\u00f3n de la versi\u00f3n activada",
     "Version check": "Kuskachay versi\u00f3nta",
     "Assignment created": "Assignment created",
@@ -446,7 +446,7 @@
     "Error fetching friends list": "Error fetching friends list",
     "Error fetching users": "Error fetching users",
     "Search users for friends": "Search users for friends",
-    "Contact Us": "Contactanos",
+    "Contact Us": "Contact Us",
     "Teacher profile picture": "Teacher profile picture",
     "Picture": "Wanki",
     "Sender profile picture": "Sender profile picture",
